--- a/scss/main.scss
+++ b/scss/main.scss
@@ -312,25 +312,8 @@ img {
     .wedo {
       display: flex;
 
-      &-img {
-        margin-right: 1rem;
-      }
-
-      &-item {
+      &-items {
         width: 50%;
-        position: relative;
-        flex-direction: column;
-
-        i {
-          top: 0;
-          left: 0;
-          position: absolute;
-        }
-
-        h2 {
-          display: block;
-          padding: 30px;
-        }
       }
     }
   }
